<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher"/>

    <Button
        android:id="@+id/angry_btn"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/button1"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/angry_btn2"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/buttonshape"
        android:text="@string/button2"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/angry_btn3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/angry_btn2"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/button3"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/angry_btn4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/angry_btn3"
        android:background="@drawable/buttonshape"
        android:layout_centerHorizontal="true"
        android:text="@string/button4"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/angry_btn5"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/angry_btn4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/button5"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/angry_btn6"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/angry_btn5"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:text="@string/button6"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/angry_btn7"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/angry_btn6"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:text="@string/button7"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</RelativeLayout>