<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    tools:context=".BirthRagister">

    <EditText
        android:id="@+id/fname"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorback"
        android:layout_centerHorizontal="true"
        android:hint="@string/fname"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="12dp"
        android:inputType="textPersonName"
        android:textColor="@color/colortext"
        android:textAlignment="center"
        android:textColorHint="@color/colortext"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorback"
        android:layout_centerHorizontal="true"
        android:hint="@string/lname"
        android:layout_marginEnd="12dp"
        android:textColor="@color/colortext"
        android:textAlignment="center"
        android:textColorHint="@color/colortext"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/Date"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:layout_below="@+id/lname"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorback"
        android:hint="@string/Date"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textColorHint="@color/colortext"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/Time"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Date"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorback"
        android:hint="@string/Time"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textColorHint="@color/colortext"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/Add"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Time"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorback"
        android:hint="@string/Address"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textColorHint="@color/colortext"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Add"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorback"
        android:hint="@string/Phone"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textColorHint="@color/colortext"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/hosp"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:layout_below="@+id/phone"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorback"
        android:hint="@string/Hospitaladd"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textColorHint="@color/colortext"
        android:textSize="35sp" />
    <Button
        android:id="@+id/Send"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_below="@+id/hosp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonshape"
        android:text="@string/send"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/colortext"
        android:textSize="32sp" />
    <Button
        android:id="@+id/History"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Send"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonstroke"
        android:text="@string/history"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/colortext"
        android:textSize="32sp" />


</RelativeLayout>