<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    tools:context=".Help">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_launcher"
        android:layout_centerHorizontal="true"
        />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/imageView"
        android:background="@color/colorback"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/help"
        android:layout_centerHorizontal="true"
        android:text="@string/help"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/angry_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:contentDescription="@string/button1"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:text="@string/But1"
        android:textColor="@color/colortext"
        android:textSize="30sp" />

</RelativeLayout>