<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/green"
    tools:context=".about_us">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/ic_launcher"
        />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Abouttext"
        android:layout_below="@+id/imageView"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text="@string/Aboutemail"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:text="@string/Aboutno"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textSize="30sp"
        android:textStyle="bold" />



</RelativeLayout>